Correction du contraste

--- a/style.css
+++ b/style.css
@@ -785,7 +785,7 @@ h4 {
 }
 
 .tc-white {
-    color: #000!important;
+    color: #FFF!important;
 }
 
 .btn-atomic-tangerine {
